# llamatui

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  llama_stats.py  pyproject.toml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
.superpowers/sdd/: cr-fix-report.md
docs/adr/: 0001-whisper-as-discovered-cuda-service.md  0002-hold-to-talk-via-auto-repeat-gap.md  0003-envelope-neutralization-tracks-the-trust-boundary.md  0004-overflow-recovery-stops-at-the-side-effect-boundary.md
docs/superpowers/plans/: 2026-06-24-onboarding-install.md  2026-06-24-runtime-settings.md  2026-06-24-voice-dictation.md  2026-06-24-workspace-filesystem-agent.md  2026-06-25-web-url-fetch.md  2026-06-26-context-compaction.md  2026-06-26-document-extraction.md  (+1 more)
llamatui/: __init__.py  __main__.py  agent_builder.py  app.py  approval.py  client.py  clipboard.py  compaction.py  conversation.py  dictation.py  documents.py  filesystem.py  graph.py  images.py  instructions.py  memory.py  metrics.py  ocr.py  paths.py  rasterizer.py  settings.py  settings_screen.py  setup_voice.py  staging.py  storage.py  styles.tcss  tools.py  turn.py  turn_view.py  voice.py  webfetch.py  whisper.py  widgets.py
scripts/: get-whisper.ps1  install.ps1
tests/: test_agent_builder.py  test_app.py  test_app_debounce.py  test_app_hold.py  test_app_resolve.py  test_approval.py  test_clipboard.py  test_compaction.py  test_conversation.py  test_dictation.py  test_documents.py  test_filesystem.py  test_graph.py  test_images.py  test_instructions.py  test_main_overrides.py  test_main_setup_voice.py  test_memory.py  test_ocr.py  test_paths.py  test_rasterizer.py  test_settings.py  test_settings_screen.py  test_setup_voice.py  test_staging.py  test_storage.py  test_tools.py  test_turn.py  test_turn_view.py  test_voice.py  test_voice_debounce.py  test_voice_hold.py  test_webfetch.py  test_whisper.py  test_widgets.py
(+8 files in other folders)
