[project]
name = "llamatui"
version = "0.1.0"
description = "A terminal UI for a local llama-server, built on the Microsoft Agent Framework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent-framework-core>=1.8.2",
    "agent-framework-openai>=1.8.2",
    "mcp>=1.9",
    "platformdirs>=4",
    "textual>=0.86",
]

[project.scripts]
llamatui = "llamatui.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llamatui"]

[dependency-groups]
dev = [
    "textual-dev>=1.7",
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
