[project]
name = "llamatui"
version = "0.1.0"
description = "A terminal UI for a local llama-server, built on the Microsoft Agent Framework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent-framework-core>=1.8.2",
    "agent-framework-openai>=1.8.2",
    "httpx>=0.27",
    "mcp>=1.9",
    "platformdirs>=4",
    "send2trash>=1.8",
    "textual>=0.86",
]

[project.optional-dependencies]
# Semantic recall (in-process embeddings via fastembed). Optional: without it, memory recall
# is keyword-only (FTS5/BM25). Install with `uv sync --extra semantic`.
semantic = ["fastembed>=0.3"]

# Voice dictation (local STT capture via sounddevice). Optional: without it, dictation is off.
# Installed by scripts/install.ps1; fetch the whisper-server binary + model with: llamatui --setup-voice
voice = ["sounddevice>=0.4"]

[project.scripts]
llamatui = "llamatui.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llamatui"]

[dependency-groups]
dev = [
    "textual-dev>=1.7",
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
